--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,7 +3,7 @@
     <div class="row text-center align-items-center flex-row-reverse">
       <div class="col-lg-auto ms-lg-auto">
         <ul class="list-inline list-inline-dots mb-0">
-          <li class="list-inline-item"><a href="/" class="link-secondary" rel="noopener">Ayuda</a></li>
+          <li class="list-inline-item"><a href="/user" class="link-secondary" rel="noopener">Ayuda</a></li>
           <li class="list-inline-item"><a href="/" class="link-secondary">Guregida</a></li>
         </ul>
       </div>
