--- a/src/views/admin/formularios/pendientes/index.ejs
+++ b/src/views/admin/formularios/pendientes/index.ejs
@@ -57,6 +57,14 @@
                       placeholder="Buscar..." aria-label="Buscar en formularios">
                   </div>
                 </form>
+                <!-- ade -->
+                <a href="#" id="ades" class="btn btn-primary d-none d-sm-inline-block">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 5l0 14"></path><path d="M5 12l14 0"></path></svg>
+                  Asignar/Desasignar
+                </a>
+                <a href="#" id="adesresp" class="btn btn-primary d-sm-none btn-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path d="M12 5l0 14"></path><path d="M5 12l14 0"></path></svg>
+                </a>
               </div>
             </div>
           </div>
