--- a/src/views/user/error400.ejs
+++ b/src/views/user/error400.ejs
@@ -40,8 +40,7 @@
   </div>
 
   <script>
-    const element = document.getElementById('back-link');
-    element.setAttribute('href', document.referrer)
+    document.getElementById('back-link').setAttribute('href', document.referrer)
   </script>
 </body>
 
