--- a/src/views/user/perfil.ejs
+++ b/src/views/user/perfil.ejs
@@ -144,12 +144,10 @@
   <script src="/js/util.js"></script>
   <script src="/js/user/perfil.js"></script>
   <script>
-    const element = document.getElementById('back-link');
-    element.setAttribute('href', document.referrer)
+    document.getElementById('back-link').setAttribute('href', document.referrer)
   </script>
   <script>
-    const element1 = document.getElementById('back-link-1');
-    element1.setAttribute('href', document.referrer)
+    document.getElementById('back-link-1').setAttribute('href', document.referrer)
   </script>
 </body>
 
