--- a/src/views/admin/formularios/asignados/referencias/index.ejs
+++ b/src/views/admin/formularios/asignados/referencias/index.ejs
@@ -110,6 +110,7 @@
     <%- include('../../../../partials/footer') %>
   </div>
 
+  <!-- modales -->
   <div class="modal modal-blur fade" id="modal-borrar" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
       <div class="modal-content">
