--- a/src/views/admin/formularios/pendientes/edit.ejs
+++ b/src/views/admin/formularios/pendientes/edit.ejs
@@ -159,7 +159,7 @@
                 </div>
                 <div class="card-footer text-end">
                   <div class="d-flex">
-                    <a href="/admin/formularios/pendientes" class="btn btn-white">Cancelar</a>
+                    <a id="back-link" class="btn btn-white">Cancelar</a>
                     <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar formulario</button>
                   </div>
                 </div>
@@ -176,6 +176,9 @@
   <script src="/js/admin/formularios/pendientes/addEdit.js"></script>
   <script>
     document.getElementById('upd').setAttribute('action', `/admin/formularios/pendientes/update?part=${getCookie('filtro')}`)
+  </script>
+  <script>
+    document.getElementById('back-link').setAttribute('href', document.referrer)
   </script>
 </body>
 
