--- a/src/views/user/formularios/asignados/add.ejs
+++ b/src/views/user/formularios/asignados/add.ejs
@@ -156,7 +156,7 @@
                 </div>
                 <div class="card-footer text-end">
                   <div class="d-flex">
-                    <a href="/user/formularios/asignados" class="btn btn-white">Cancelar</a>
+                    <a id="back-link" class="btn btn-white">Cancelar</a>
                     <button type="submit" class="btn btn-primary ms-auto" id="btnInsert">Crear nevo formulario</button>
                   </div>
                 </div>
@@ -172,8 +172,10 @@
   <script src="/js/util.js"></script>
   <script src="/js/user/formularios/asignados/addEdit.js"></script>
   <script>
-    const elemAdd = document.getElementById('add');
-    elemAdd.setAttribute('action', `/user/formularios/asignados/insert?part=${getCookie('filtro')}`)
+    document.getElementById('add').setAttribute('action', `/user/formularios/asignados/insert?part=${getCookie('filtro')}`)
+  </script>
+  <script>
+    document.getElementById('back-link').setAttribute('href', document.referrer)
   </script>
 </body>
 
