--- a/src/views/user/formularios/asignados/edit.ejs
+++ b/src/views/user/formularios/asignados/edit.ejs
@@ -159,7 +159,7 @@
                 </div>
                 <div class="card-footer text-end">
                   <div class="d-flex">
-                    <a href="/user/formularios/asignados" class="btn btn-white">Cancelar</a>
+                    <a id="back-link" class="btn btn-white">Cancelar</a>
                     <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar formulario</button>
                   </div>
                 </div>
@@ -176,6 +176,9 @@
   <script src="/js/user/formularios/asignados/addEdit.js"></script>
   <script>
     document.getElementById('upd').setAttribute('action', `/user/formularios/asignados/update?part=${getCookie('filtro')}`)
+  </script>
+  <script>
+    document.getElementById('back-link').setAttribute('href', document.referrer)
   </script>
 </body>
 
