actualizado busquedas usuario

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,7 +4,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <h1 class="navbar-brand pe-0 pe-md-3">
-      <a href="/">
+      <a href="/user">
         <img src="/img/logo.png" width="110" height="32" alt="Formularios" class="navbar-brand-image">
       </a>
     </h1>
