--- a/src/views/admin/formularios/pendientes/ades/index.ejs
+++ b/src/views/admin/formularios/pendientes/ades/index.ejs
@@ -38,7 +38,7 @@
                 Usuarios
               </div>
               <h2 class="page-title">
-                Asignar/Desasignar
+                Asignar
               </h2>
             </div>
             <div class="col-auto ms-auto d-print-none">
