--- a/src/views/admin/historicos/index.ejs
+++ b/src/views/admin/historicos/index.ejs
@@ -126,10 +126,10 @@
   </div>
 
   <script>
-    const hasNexts = <%- datos.hasNextUsers %>
+    const hasNexts = <%- datos.hasNexts %>
   </script>
   <script>
-    const hasPrevs = <%- datos.hasPrevUsers %>
+    const hasPrevs = <%- datos.hasPrevs %>
   </script>
   <script src="/js/util.js"></script>
   <script src="/js/admin/historicos/index.js"></script>
