--- a/src/views/admin/cargas/add.ejs
+++ b/src/views/admin/cargas/add.ejs
@@ -212,6 +212,9 @@
   <script src="/js/util.js"></script>
   <script src="/js/admin/cargas/add.js"></script>
   <script>
+    document.getElementById('add').setAttribute('action', `/admin/cargas/insert?part=${getCookie('filtro')}`)
+  </script>
+  <script>
     document.getElementById('back-link').setAttribute('href', document.referrer)
   </script>
 </body>
