--- a/src/views/admin/usuarios/add.ejs
+++ b/src/views/admin/usuarios/add.ejs
@@ -173,8 +173,7 @@
   <script src="/js/util.js"></script>
   <script src="/js/admin/usuarios/addEdit.js"></script>
   <script>
-    const elemAdd = document.getElementById('add');
-    elemAdd.setAttribute('action', `/admin/usuarios/insert?part=${getCookie('filtro')}`)
+    document.getElementById('add').setAttribute('action', `/admin/usuarios/insert?part=${getCookie('filtro')}`)
   </script>
 </body>
 
