--- a/src/views/user/formularios/resueltos/index.ejs
+++ b/src/views/user/formularios/resueltos/index.ejs
@@ -118,7 +118,7 @@
             <path d="M12 9v2m0 4v.01"></path>
             <path d="M5 19h14a2 2 0 0 0 1.84 -2.75l-7.1 -12.25a2 2 0 0 0 -3.5 0l-7.1 12.25a2 2 0 0 0 1.75 2.75"></path>
           </svg>
-          <h3>Desasignar formulario resuelto</h3>
+          <h3>Desresolver formulario</h3>
           <div id="msgdes"></div>
         </div>
         <div class="modal-footer">
@@ -130,7 +130,7 @@
               <div class="col">
                 <form action="#" id="unasig" method="POST">
                   <input type="hidden" id="iddesa" name="idform" value="">
-                  <button type="submit" class="btn btn-danger w-100">Desasignar formulario</button>
+                  <button type="submit" class="btn btn-danger w-100">Desresolver formulario</button>
                 </form>
               </div>
             </div>
