--- a/src/views/user/formularios/resueltos/referencias/index.ejs
+++ b/src/views/user/formularios/resueltos/referencias/index.ejs
@@ -44,6 +44,25 @@
                 Referencias
               </h2>
             </div>
+            <div class="col-auto ms-auto d-print-none">
+              <div class="btn-list">
+                <form action="/user/formularios/resueltos/referencias" method="GET">  
+                  <div class="input-icon">
+                    <span class="input-icon-addon">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
+                        viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                        <circle cx="10" cy="10" r="7"></circle>
+                        <line x1="21" y1="21" x2="15" y2="15"></line>
+                      </svg>
+                    </span>
+                    <input type="text" class="form-control d-inline-block me-3" id="buscarRefeBox" name="part"
+                      placeholder="Buscar..." aria-label="Buscar en referencias">
+                  </div>
+                </form>
+              </div>
+            </div>            
           </div>
         </div>
       </div>
