--- a/src/views/user/formularios/resueltos/referencias/index.ejs
+++ b/src/views/user/formularios/resueltos/referencias/index.ejs
@@ -79,6 +79,7 @@
                         <th class="w-7">Fecha</th>
                         <th class="w-8">NIF</th>
                         <th>Tipo</th>
+                        <th class="w-5"></th>
                       </tr>
                     </thead>
                     <tbody id="table-body">
