--- a/src/views/admin/usuarios/add.ejs
+++ b/src/views/admin/usuarios/add.ejs
@@ -157,7 +157,7 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <a href="/admin/usuarios" class="btn btn-white">Cancelar</a>
+                      <a href="#" id="volver" class="btn btn-white">Volver</a>
                       <button type="submit" class="btn btn-primary ms-auto" id="btnInsert">Crear nuevo usuario</button>
                     </div>
                   </div>
