--- a/src/views/admin/cargas/index.ejs
+++ b/src/views/admin/cargas/index.ejs
@@ -95,15 +95,9 @@
     </div>
 
     <script>
-      const hasNexts = <%- datos.hasNexts %>
-    </script>
-    <script>
-      const hasPrevs = <%- datos.hasPrevs %>
+      const datos = <%- JSON.stringify(datos) %>
     </script>
     <script src="/js/util.js"></script>
     <script src="/js/admin/cargas/index.js"></script>
-    <script>
-      buildTable(<%- JSON.stringify(datos.cargas) %>, <%- JSON.stringify(datos.cursor) %>)
-    </script>
   </body>
 </html>
