--- a/src/views/admin/oficinas/add.ejs
+++ b/src/views/admin/oficinas/add.ejs
@@ -72,7 +72,7 @@
                 </div>
                 <div class="card-footer text-end">
                   <div class="d-flex">
-                    <a href="/admin/oficinas" class="btn btn-white">Cancelar</a>
+                    <a href="#" id="volver" class="btn btn-white">Volver</a>
                     <button type="submit" class="btn btn-primary ms-auto" id="btnInsert">Crear nueva oficina</button>
                   </div>
                 </div>
