--- a/src/views/admin/usuarios/edit.ejs
+++ b/src/views/admin/usuarios/edit.ejs
@@ -153,7 +153,7 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <a href="/admin/usuarios" class="btn btn-white">Cancelar</a>
+                      <a href="#" id="volver" class="btn btn-white">Volver</a>
                       <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar usuario</button>
                     </div>
                   </div>
@@ -170,8 +170,7 @@
   <script src="/js/util.js"></script>
   <script src="/js/admin/usuarios/addEdit.js"></script>
   <script>
-    const elemUpd = document.getElementById('upd');
-    elemUpd.setAttribute('action', `/admin/usuarios/update?part=${getCookie('filtro')}`)
+    document.getElementById('upd').setAttribute('action', `/admin/usuarios/update?part=${getCookie('filtro')}`)
   </script>
 </body>
 
