--- a/src/views/admin/formularios/asignados/ades/index.ejs
+++ b/src/views/admin/formularios/asignados/ades/index.ejs
@@ -100,19 +100,10 @@
   </div>
 
   <script>
-    const hasNexts = <%- datos.hasNexts %>
-  </script>
-  <script>
-    const hasPrevs = <%- datos.hasPrevs %>
-  </script>
-  <script>
-    const estados = <%- JSON.stringify(datos.estadosUsuario) %>
+    const datos = <%- JSON.stringify(datos) %>
   </script>
   <script src="/js/util.js"></script>
   <script src="/js/admin/formularios/asignados/ades/index.js"></script>
-  <script>
-    buildTable(<%- JSON.stringify(datos.usuarios) %>, <%- JSON.stringify(datos.cursor) %>)
-  </script>
 </body>
 
 </html>
