--- a/src/views/admin/formularios/asignados/edit.ejs
+++ b/src/views/admin/formularios/asignados/edit.ejs
@@ -167,7 +167,7 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <a id="back-link" class="btn btn-white">Cancelar</a>
+                      <a href="#" id="volver" class="btn btn-white">Volver</a>
                       <button type="submit" class="btn btn-primary ms-auto" id="btnUpdate">Actualizar formulario</button>
                     </div>
                   </div>
