--- a/src/views/admin/formularios/asignados/referencias/index.ejs
+++ b/src/views/admin/formularios/asignados/referencias/index.ejs
@@ -46,7 +46,7 @@
             </div>
             <div class="col-auto ms-auto d-print-none">
               <div class="btn-list">
-                <form action="/admin/formularios/asignados/referencias/<%- datos.formulario.IDFORM %>" method="GET">  
+                <form action="/admin/formularios/asignados/referencias/<%- datos.formulario.IDFORM %>" method="GET">
                   <div class="input-icon">
                     <span class="input-icon-addon">
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24"
@@ -86,6 +86,7 @@
                         <th class="w-7">Fecha</th>
                         <th class="w-8">NIF</th>
                         <th>Tipo</th>
+                        <th class="w-9">Referencia</th>
                         <th class="w-5"></th>
                       </tr>
                     </thead>
@@ -149,19 +150,10 @@
   </div>
 
   <script>
-    const hasNexts = <%- datos.hasNexts %>
-  </script>
-  <script>
-    const hasPrevs = <%- datos.hasPrevs %>
-  </script>
-  <script>
-    const formulario = <%- JSON.stringify(datos.formulario) %>
+    const datos = <%- JSON.stringify(datos) %>
   </script>
   <script src="/js/util.js"></script>
   <script src="/js/admin/formularios/asignados/referencias/index.js"></script>
-  <script>
-    buildTable(<%- JSON.stringify(datos.referencias) %>, <%- JSON.stringify(datos.cursor) %>)
-  </script>
 </body>
 
 </html>
