--- a/src/views/admin/formularios/pendientes/index.ejs
+++ b/src/views/admin/formularios/pendientes/index.ejs
@@ -146,16 +146,10 @@
   </div>  
   
   <script>
-    const hasNexts = <%- datos.hasNexts %>
-  </script>
-  <script>
-    const hasPrevs = <%- datos.hasPrevs %>
+    const datos = <%- JSON.stringify(datos) %>
   </script>
   <script src="/js/util.js"></script>
   <script src="/js/admin/formularios/pendientes/index.js"></script>
-  <script>
-    buildTable(<%- JSON.stringify(datos.formularios) %>, <%- JSON.stringify(datos.cursor) %>)
-  </script>
 </body>
 
 </html>
