--- a/src/views/admin/formularios/resueltos/edit.ejs
+++ b/src/views/admin/formularios/resueltos/edit.ejs
@@ -26,7 +26,7 @@
 <body>
   <div class="page">
     <%- include('../../../partials/header') %>
-    <%- include('../../../partials/navbar', {opcion: 'FORMULARIO' }) %>
+    <%- include('../../../partials/navbar', {opcion: 'ADMINISTRACION' }) %>
     <div class="page-wrapper">
       <div class="page-header d-print-none">
         <div class="container-xl">
@@ -131,7 +131,7 @@
                   </div>
                   <div class="card-footer text-end">
                     <div class="d-flex">
-                      <a id="back-link" class="btn btn-white">Volver</a>
+                      <a href="#" id="volver" class="btn btn-white">Volver</a>
                     </div>
                   </div>
               </div>
@@ -142,9 +142,8 @@
     </div>
     <%- include('../../../partials/footer') %>
   </div>
-  <script>
-    document.getElementById('back-link').setAttribute('href', document.referrer)
-  </script>  
+  <script src="/js/util.js"></script>
+  <script src="/js/admin/formularios/resueltos/addEdit.js"></script>
 </body>
 
 </html>
